0.36 (not yet released)
* add commands "tags", "playlistlength", "searchplaylist", "stickernames", "stickertypes", "stickernamestypes", "searchsticker"
* concatenate multiple tag values
* require libmpdclient 2.23 or newer

0.35 (2023/12/21)
* fix null pointer dereference on bad status format
* add "%kbitrate%", "%audioformat%", "%samplerate%", "%bits%" and "%channels%" options to the "status" command
* the "%state%" option of the "status" command now returns "stopped" when the MPD server is stopped
* add commands "lsdirs", "addplaylist", "delplaylist", "moveplaylist", "renplaylist", "clearplaylist"
* add "playlist" option "--with-prio"
* bash completion: pass "--" to mpc to allow parameters with dash
* bash completion: fix filenames with parentheses
* bash completion: override $MPC_FORMAT

0.34 (2021/11/30)
* add commands "albumart", "readpicture"
* don't print status after error
* custom status format
* support grouping "list" results
* meson: auto-build libmpdclient if not available
* require libmpdclient 2.16 or newer
* require MPD 0.21 or newer

0.33 (2019/10/31)
* fix off-by-one bug in "prio" command
* reduce network transfer for "playlist", "ls", "listall"

0.32 (2019/06/11)
* add command "listneighbors"
* reduce network transfer for "search"
* fall back to "Composer" or "AlbumArtist" tag in the default format
* support abstract socket in --host option

0.31 (2018/10/24)
* add commands "queued", "seekthrough", "mount", "unmount"
* support "search" with filter expression (MPD 0.21)
* support "load" with range
* allow only tag names after "list"
* fix the Windows build (no strndup())
* make documentation build optional with -Ddocumentation={true|false|auto}
* build: require Meson 0.47

0.30 (2018/05/03)
* add command "rescan"
* seek: use the "seekcur" command instead of "seekid"
* require MPD 0.19

0.29 (2018/02/11)
* implement %prio% for --format
* the default --format falls back to "performer" if there is no "artist"
* add command "prio"